# hypertopos-py

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: README.md  api-reference.md  architecture.md  benchmarks.md  concepts.md  configuration.md  data-format.md  quickstart.md
docs/benchmark/: LICENSE  README.md
docs/benchmark/berka/: README.md
docs/benchmark/ibm-aml/: README.md  _layer2_cross_eval.py  _layer3_cross_eval.py  layer1_passive_scan.py  layer2_xgboost_sweep.py  layer3_typology_filter.py  passive-scan-calibration.md
docs/benchmark/nyc-taxi/: README.md
hypertopos/: __init__.py  sphere.py
hypertopos/builder/: __init__.py  _stats.py  _writer.py  builder.py  derived.py  mapping.py
hypertopos/cli/: __init__.py  __main__.py  build.py  info.py  main.py  schema.py  sources.py
hypertopos/engine/: aggregation.py  calibration.py  chains.py  composition.py  datafusion_agg.py  forecast.py  geometry.py  investigation.py  lance_sql_agg.py  subprocess_agg.py
hypertopos/model/: manifest.py  objects.py  sphere.py
hypertopos/navigation/: __init__.py  navigator.py  scanner.py
hypertopos/storage/: _schemas.py  cache.py  reader.py  writer.py
hypertopos/utils/: arrow.py
tests/: conftest.py  test_aggregation_engine.py  test_arrow_utils.py  test_builder.py  test_builder_alias.py  test_builder_derived.py  test_builder_edges.py  test_cache.py  test_calibration.py  test_chains.py  test_cli.py  test_cli_alias.py  test_cli_sources.py  test_composition.py  test_continuous_event_dims.py  test_data_quality_prop.py  test_datafusion_agg.py  test_detection.py  test_edge_table.py  test_engine.py  test_forecast.py  test_fts.py  test_geometric_path.py  test_geometry_stats.py  test_hybrid_search.py  test_incremental.py  test_investigation.py  test_lance_sql_agg.py  test_mapping.py  test_model.py  test_mvcc_session.py  test_navigation.py  test_navigator_alerts.py  test_observability.py  test_precision_stack.py  test_reputation.py  test_row_id_cache.py  test_scanner.py  test_sphere.py  test_sphere_overview_perf.py  (+8 more)
tests/fixtures/: generate_fixtures.py
(+71 files in other folders)
